--- a/index.html
+++ b/index.html
@@ -1,222 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Profile- Quilario J</title>
+  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="vendors/linericon/style.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
-<style>
-* {
-  box-sizing: border-box;
-}
 
-body {
-  font-family: Arial;
-  padding: 10px;
-  background: #f1f1f1;
-}
-
-/* Header/Blog Title */
-.header {
-    background: linear-gradient(to right, #614385 0%, #516395 100%);
-  padding: 30px;
-  text-align: center;
- color:white;
-  /* background: white; */
-}
-
-.header h1 {
-  font-size: 50px;
-}
-
-/* Style the top navigation bar */
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-}
-
-/* Style the topnav links */
-.topnav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-
-/* Change color on hover */
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.profile-section{
-  display: flex;
-
-}
-
-.profile-section img{
-  width: 500px;
-  height: 600px;
-  object-fit: cover; 
-  margin-right: 50px;
-  border-radius: 18px;
-}
-
-.personal_text{
-  vertical-align: middle;
-    align-self: center;
-}
-.personal_text h6 {
-    font-size: 14px;
-    font-family: "Roboto", sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 2.1px;
-    font-weight: normal;
-    margin-bottom: 12px;
-    color: #222222;
-}
-.personal_text h3 {
-    font-size: 48px;
-    font-family: "Roboto", sans-serif;
-    text-transform: uppercase;
-    margin-bottom: 15px;
-    color: #222222;
-}
-.personal_text h4 {
-    font-size: 20px;
-    font-weight: 500;
-    font-family: "Roboto", sans-serif;
-    text-transform: uppercase;
-    margin-bottom: 20px;
-    color: #a5a1a1;
-}
-.personal_text p {
-    font-family: "Roboto", sans-serif;
-    max-width: 540px;
-    color: #777777;
-    margin-bottom: 40px;
-}
-.list {
-    list-style: none;
-    margin: 0px;
-    padding: 0px;
-}
-.personal_text .basic_info li a {
-    position: relative;
-    padding-left: 40px;
-    font-size: 16px;
-    color: #777777;
-}
-.personal_text .basic_info li {
-    margin-bottom: 15px;
-}
-.personal_text .basic_info li a i {
-    position: absolute;
-    left: 0px;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 20px;
-    color: #766dff;
-}
-.lnr {
-    font-family: 'Linearicons-Free';
-    speak: none;
-    font-style: normal;
-    font-weight: normal;
-    font-variant: normal;
-    text-transform: none;
-    line-height: 1;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-    text-decoration: none;
-    transition: all 0.3s ease-in-out;
-}
-.personal_text .personal_social {
-    margin-top: 45px;
-}
-.personal_text .personal_social li {
-    display: inline-block;
-    margin-right: 7px;
-}
-.personal_text .personal_social li a {
-    line-height: 40px;
-    width: 40px;
-    background: #e8e8e8;
-    border-radius: 5px;
-    display: inline-block;
-    text-align: center;
-    color: #fff;
-    font-size: 16px;
-}
-/* Create two unequal columns that floats next to each other */
-/* Left column */
-.leftcolumn {   
-  float: left;
-  width: 75%;
-}
-
-/* Right column */
-.rightcolumn {
-  float: left;
-  width: 25%;
-  background-color: #f1f1f1;
-  padding-left: 20px;
-}
-
-/* Fake image */
-.fakeimg {
-  background-color: #aaa;
-  width: 100%;
-  padding: 20px;
-}
-
-/* Add a card effect for articles */
-.card {
-  background-color: white;
-  padding: 20px;
-  margin-top: 20px;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Footer */
-.footer {
-  padding: 20px;
-  text-align: center;
-  background: #ddd;
-  margin-top: 20px;
-}
-
-/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 800px) {
-  .leftcolumn, .rightcolumn {   
-    width: 100%;
-    padding: 0;
-  }
-}
-
-/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
-@media screen and (max-width: 400px) {
-  .topnav a {
-    float: none;
-    width: 100%;
-  }
-}
-</style>
 </head>
 <body>
 
 <div class="header" >
-  <h1>MY PROFILE</h1>
+  <h1>PERSONAL PROFILE</h1>
   <p>Resize the browser window to see the effect.</p>
 </div>
 
@@ -234,21 +28,23 @@ a {
           <img src="images/profile.jpg" alt="">         
        
           <div class="personal_text">
-            <h6>Good day Everyone! I am</h6>
-            <h3>Jonathan Quilario</h3>
-            <h4>Software Developer</h4>
-            <p>A skilled programmer who utilizes the MVC Framework, c#, ASP.Net, HTML, CSS, JQuery, Javascript, Webforms, Python, VueJS, and ReactJS</p>
-            <ul class="list basic_info">
-            <li><a href="#"><i class="lnr lnr-calendar-full"></i> 4th June, 1989</a></li>
-            <li><a href="#"><i class="lnr lnr-phone-handset"></i> (+63) 965 791 1749</a></li>
-            <li><a href="#"><i class="lnr lnr-envelope"></i>jonathanquilario@gmail.com</a></li>
-            <li><a href="#"><i class="lnr lnr-home"></i> Peda St., San Francisco, Panabo City</a></li>
-            </ul>
-            <ul class="list personal_social">
-            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-            </ul>
+              <h6>Good day Everyone! I am</h6>
+              <h3>Jonathan Quilario</h3>
+              <h4>Software Developer</h4>
+              <p>A skilled programmer who utilizes the MVC Framework, c#, ASP.Net, HTML, CSS, JQuery, Javascript, Webforms, Python, VueJS, and ReactJS</p>
+
+              <ul class="list basic_info">
+                <li><a href="#"><i class="lnr lnr-calendar-full"></i> 4th June, 1989</a></li>
+                <li><a href="#"><i class="lnr lnr-phone-handset"></i> (+63) 965 791 1749</a></li>
+                <li><a href="#"><i class="lnr lnr-envelope"></i>jonathanquilario@gmail.com</a></li>
+                <li><a href="#"><i class="lnr lnr-home"></i> Peda St., San Francisco, Panabo City</a></li>
+              </ul>
+
+              <ul class="list personal_social">
+                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+              </ul>
           </div>
         </div>  
       
@@ -260,7 +56,7 @@ a {
    
     </div>
     <div class="card">
-      <h2>TITLE HEADING</h2>
+      <h2>WORK EXPERIENCES</h2>
       <h5>Title description, Sep 2, 2017</h5>
       <div class="fakeimg" style="height:200px;">Image</div>
       <p>Some text..</p>
@@ -269,12 +65,12 @@ a {
   </div>
   <div class="rightcolumn">
     <div class="card">
-      <h2>About Me</h2>
+      <h2>EDUCATION</h2>
       <div class="fakeimg" style="height:100px;">Image</div>
       <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
     </div>
     <div class="card">
-      <h3>Popular Post</h3>
+      <h3>SKILLS</h3>
       <div class="fakeimg"><p>Image</p></div>
       <div class="fakeimg"><p>Image</p></div>
       <div class="fakeimg"><p>Image</p></div>
