--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
     </div>
 
     <div class="footer">
-        <h2>Footer</h2>
+        <div>Powered by <strong>HTML</strong> and <strong>CSS</strong>
+        </div>
     </div>
 
 </body>
