--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     </div>
                     <div class="container left">
                         <div class="content">
-                            <h2>PROGRAMMER NCIV INSTRUCTOR </h2>
+                            <h2>PROGRAMMING NCIV INSTRUCTOR </h2>
                             <div class="date">SEP 2009 – MAY 2012</div>
                             <div class="company">ACADEMIA DE DAVAO COLLEGE</div>
                             <p>Quezon-Bonifacio St., Poblacion, Tagum City, Davao del Norte, Philippines</p>
